minor fix : flex gapping issue

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -48,7 +48,7 @@
     border-top: 1px solid #dadada50;
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 4px;
     padding: 1rem;
     cursor: pointer;
 }
